c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/missing_type_specifier.c
/* A declaration must have at least one type specifier
 * (Clang/GCC warn instead of failing here)
 */
static var = 0;

int main(void) {
    return var;
}